deployment-kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dev
  namespace: apps
  labels:
    app: app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-dev
  template:
    metadata:
      labels:
        app: app-dev
    spec:
      containers:
      - name: app-dev
        image: 12322.dkr.ecr.us-east-1.amazonaws.com/krishna-app/app:v1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "0.5"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 3000
    
---

apiVersion: v1
kind: Service
metadata:
  name: app-dev
  namespace: apps
spec:
  selector:
    app: app-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 443
      targetPort: 3000
      name: https

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-dev
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.service.dev.krishna.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-dev
            port:
              number: 80
